fixed road on mobile

--- a/src/pages/way/part.module.css
+++ b/src/pages/way/part.module.css
@@ -29,5 +29,8 @@
     background:  rgb(235,234,228);
     width:100%;
 }
+.part-body{    
+    width: 360px;
+}
     }
      
